syntax = "proto3";

package user.v1;

option go_package = "user/gen;gen";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message CreateRequest {
  string name = 1;
  string mobile = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message GetRequest {
  string id = 1;
}

message ProfileRequest {
  string id = 1;
}

message ProfileResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp updatedAt = 6;
}

message DeleteRequest {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
  string mobile = 3;
  string email = 4;
  string password = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

service UserService {
  rpc Create(CreateRequest) returns (User);
  rpc Get(GetRequest) returns (User);
  rpc Profile(ProfileRequest) returns (ProfileResponse);
  rpc Update(UpdateRequest) returns (User);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc List(google.protobuf.Empty) returns (stream User);
}